# structure-analyzer-featurizer

./: .buildinfo  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prettierrc  AUTHORS.rst  CHANGELOG.rst  README.md  README.rst  features.html  genindex.html  getting-started.html  index.html  license.html  main.py  nodemon.json  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  release.html  requirements.txt  search.html  searchindex.js
.codespell/: ignore_words.txt
.github/ISSUE_TEMPLATE/: release_checklist.md
.github/workflows/: build-wheel-release-upload.yml  check-news-item.yml  matrix-and-codecov-on-merge-to-main.yml  publish-docs-on-release.yml  tests-on-pr.yml
20240902_ICSD_demo_files/: EntryWithCollCode102712.cif  EntryWithCollCode104584.cif  EntryWithCollCode105403.cif  EntryWithCollCode180215.cif  EntryWithCollCode187622.cif  EntryWithCollCode190197.cif  EntryWithCollCode235960.cif  EntryWithCollCode235971.cif  EntryWithCollCode43054.cif  EntryWithCollCode43417.cif  EntryWithCollCode52294.cif  EntryWithCollCode53971.cif  EntryWithCollCode622097.cif  EntryWithCollCode623049.cif  EntryWithCollCode624932.cif  EntryWithCollCode629694.cif  EntryWithCollCode630842.cif  EntryWithCollCode641992.cif  EntryWithCollCode646875.cif  EntryWithCollCode651558.cif
20240902_PCD_demo_files/: 250954.cif  250957.cif  251239.cif  251426.cif  251912.cif  251927.cif  251935.cif  251943.cif  251956.cif  251988.cif  251994.cif  252007.cif  252014.cif  252074.cif  260031.cif  260046.cif  260052.cif  260247.cif  260569.cif
_modules/: index.html
_modules/SAF/: config.html
_sources/: features.rst.txt  getting-started.rst.txt
_static/: documentation_options.js
api/: SAF.config.html  SAF.html  SAF.version.html  modules.html
core/: config.py
core/data/: radius.py  radius_handler.py
core/features/: binary_env.py  binary_env_handler.py  binary_interatomic.py  binary_wyc.py  coordination.py  coordination_handler.py  ternary_env.py  ternary_env_handler.py  ternary_interatomic.py  ternary_wyc.py  universal.py
core/optimize/: radius.py
core/utils/: bond.py  bond_count.py  bond_distance.py  check_file.py  element_order.py  element_parser.py  environment_parser.py  folder.py  log.py  packing.py  prompt.py
doc/: Makefile
doc/source/: app.rst  conf.py  index.rst  (+2 more)
news/: doc-radius-opt-option-doc.rst  main.rst  pyproject-author-label-doc.rst  refactor-binary.rst  refactor.rst  remove-config.py.rst  skpkg.rst
requirements/: conda.txt  docs.txt  pip.txt
snippets/: example-table.html
tests/: conftest.py  test_all_binary_features.py  test_features_binary.py  test_features_quaternary.py  test_features_ternary.py  test_generator.py  test_version.py
(+115 files in other folders)
