[build-system]
requires = ["setuptools>=62.0", "setuptools-git-versioning>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "structure-analyzer-featurizer"
dynamic=['version', 'dependencies']
authors = [
  { name="Sangjoon Lee", email="bobleesj@gmail.com" },
]
maintainers = [
  { name="Sangjoon Lee", email="bobleesj@gmail.com" },
]
description = "Python package to generate geometric features of interatomic distances, atomic environment information, and coordination numbers from a folder containing .cif files."
keywords = ['features', 'materials-infomatics', 'machine-learning', 'structure', 'materials']
readme = "README.rst"
requires-python = ">=3.11, <3.14"
classifiers = [
        'Development Status :: 5 - Production/Stable',
        'Environment :: Console',
        'Intended Audience :: Developers',
        'Intended Audience :: Science/Research',
        'License :: OSI Approved :: BSD License',
        'Operating System :: MacOS :: MacOS X',
        'Operating System :: Microsoft :: Windows',
        'Operating System :: POSIX',
        'Operating System :: Unix',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Programming Language :: Python :: 3.13',
        'Topic :: Scientific/Engineering :: Physics',
        'Topic :: Scientific/Engineering :: Chemistry',
]

[project.urls]
Homepage = "https://github.com/bobleesj/structure-analyzer-featurizer/"
Issues = "https://github.com/bobleesj/structure-analyzer-featurizer/issues/"

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
dev_template = "{tag}"
dirty_template = "{tag}"

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["*"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.dynamic]
dependencies = {file = ["requirements/pip.txt"]}

[tool.codespell]
exclude-file = ".codespell/ignore_lines.txt"
ignore-words = ".codespell/ignore_words.txt"
skip = "*.cif,*.dat"

[tool.docformatter]
recursive = true
wrap-summaries = 72
wrap-descriptions = 72

[tool.black]
line-length = 140
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.cif
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.rst
  | \.txt
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''
